
12. Mar. 2002
- vdi/* made prototypes, no warnings anymore, indented whole vdi (MAD) 
- vdi/* jmptbl.c changed jumptables functions to void - arguments 
  are passed in arrays in VDI, not via stack.  (MAD)
- vdi/lisagem.S partitially implemented mouse driver
  
13. Mar. 2002
- bios/bios.c removed mouse_init. Done, when graphics is initialized (MAD)

15. Mar. 2002
- vdi/lisagem.S - got the mousedriver working (MAD)
- bios/mouse.c  - Added mouse_init - initial setup of mouse parameters (MAD)
- bios/mousedrv.S - Seperated the mousedriver from VDI (MAD)
- vdi/lisagem.S - Here is now just the VDI part of mousedriver setup (MAD)
- bios/lineainit.c - implemented v_pl_dspl (bytes/plane) for VDI (MAD)
- bios/screen.c - the last patch for real Falcon reverted because it caused
                  black screen under ARAnyM (joy)
17. Mar. 2002
- vdi/* - corrected the swapped #defines to use Atari and/or VME10 (MAD)
- You can now use the AES as user interface instead of EmuCON (THH)
  (by enabling it in the Makefile, however AES is not yet fully working)

18. Mar. 2002
- bios/kprint.c - registers are printed out to ease debugging (joy)

20. Mar. 2002
- The AES are now succeed in loading and running DESKTOP.APP from disk! (THH)
- Moved some more VDI variables to lineavars.S (THH)
- Cleaned up the VDI, it works now quite good in ST-HIGH resolution (THH)

21. Mar. 2002
- doc/changelog.txt - added vdi/ and aes/ to the tgz target (MAD)
- doc/license.txt   - added GPL for EmuTOS (MAD)

25. Mar. 2002
- Included the GEM.RSC into the ROM (THH).

26. Mar. 2002
- bdos/biosmain.c - made DBGIFOS working by disabl. osif  (MAD)
- bdos/umem.c  switched off DBGUMEM and assert by default (MAD)

28. Mar. 2002
- bios/startup.S - changed the _dummyaes vector for fVDI (MAD)
- bios/startup.S - changed label _dummyaes to _gemtrap (MAD)

01. Apr. 2002
- vdi/lisagem.S - SR switched on for timer interrupt (MAD)
- bios/startup.S - did switch on the etv_timer interrupt vector (MAD)
